# autonomous-car

./: .gitignore  Auto.py  Camera.py  Controller.py  Joystick.py  Manual.py  README.md  ServoDriver.py  Vehicle.py  actuator.py  auto.py  camera.py  camera_calibration.py  camera_interface.py  camera_test.py  car_controller.py  config.py  controller.py  drive.py  filter_test.py  frame_analyzer.py  image_filters.py  image_processor.py  joystick.py  lane_detector.py  led_test.py  main.py  manual.py  model.h5  model.json  pyproject.toml  servo_driver.py  start.py  test.py  train_model.py
models/: model.h5  model.json  model_25_0-4.json
scripts/: README.md  preview_training_images.py  process_training_images.py  pyproject.toml  reprocess_raw_images.py  test_bench.py  train_model.py  upload_records.sh
tests/: crop_test.py  filter_test.py
utilities/: image_filters.py  stream_pipelines.py
