[tool.poetry]
name = "futurice-london-donkey-car"
version = "0.1.0"
description = "A Python script to be run on a RaspberryPi for piloting an autonomous car"
authors = ["Joe Love <joe.love@futurice.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.0"
opencv-python = "^4.0"
funcy = "^1.11"
camera = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
