[tool.poetry]
name = "futurice-london-donkey-car"
version = "0.1.0"
description = "A Python script to be run on a RaspberryPi for piloting an autonomous car"
authors = ["Joe Love <joe.love@futurice.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5.0"
opencv-python = ">=3.4"
funcy = "^1.11"
camera = "^1.3"
donkeycar = "^2.5"
tensorflow = "^1.13"
picamera = "^1.13"
Adafruit_PCA9685 = "^1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
