[tool.poetry]
name = "autonomous-car"
version = "0.2.0"
description = "A Python script to be run on a RaspberryPi for piloting an autonomous car"
authors = ["Joe Love <joe.love@futurice.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.2"
numpy = "1.13.3"
opencv-python = "3.4.4.19"
funcy = "1.11"
tensorflow = "1.13.1"
picamera = "1.13"
adafruit-circuitpython-servokit = "1.1.0"
Pillow = "6.0.0"

[tool.poetry.dev-dependencies]
pylint = "2.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
